k8s/apps/srvc-inference/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: models-vs
  namespace: ml
spec:
  hosts:
    - models.example.com # Replace with the domain
  gateways:
    - istio-system/kserve-ingress-gateway
  http:
    - match: [{ uri: { prefix: "/v2/models/sbert" } }]
      route: [{ destination: { host: sbert-predictor-default.ml.svc.cluster.local, port: { number: 80 } } }]
    - match: [{ uri: { prefix: "/v2/models/tfidf" } }]
      route: [{ destination: { host: tfidf-predictor-default.ml.svc.cluster.local, port: { number: 80 } } }]
