k8s/apps/srvc-inference/network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: srvc-inference-network-policy
  namespace: apps
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - srvc-inference-sbert
          - srvc-inference-tfidf
  policyTypes:
    - Ingress
    - Egress
  
  ingress:
    - {}
  
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: mlflow
      ports:
        - protocol: TCP
          port: 5000
    
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: sentinel
              app.kubernetes.io/name: kv
              app.kubernetes.io/part-of: redis-failover
      ports:
        - protocol: TCP
          port: 26379
    
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: redis
              app.kubernetes.io/managed-by: redis-operator
              app.kubernetes.io/name: kv
              app.kubernetes.io/part-of: redis-failover
      ports:
        - protocol: TCP
          port: 6379

    - to:
        - podSelector:
            matchLabels:
              strimzi.io/broker-role: "true"
              strimzi.io/cluster: kafka
              strimzi.io/kind: Kafka
              strimzi.io/name: kafka-kafka
      ports:
        - protocol: TCP
          port: 9091
        - protocol: TCP
          port: 9092

    - to:
        - podSelector:
            matchLabels:
              app: qdrant
      ports:
        - protocol: TCP
          port: 6333
        - protocol: TCP
          port: 6334
        - protocol: TCP
          port: 6335

    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    
    - to:
        - namespaceSelector:
            matchExpressions:
              - key: name
                operator: DoesNotExist
          podSelector:
            matchExpressions:
              - key: name
                operator: DoesNotExist
